--- a/lightdm.conf
+++ b/lightdm.conf
@@ -116,7 +116,7 @@ session-wrapper=/etc/lightdm/Xsession
 #session-setup-script=
 #session-cleanup-script=
 autologin-guest=false
-autologin-user=today
+autologin-user=todayycommit
 autologin-user-timeout=0
 #autologin-in-background=false
 #autologin-session=
